2003-09-04  Nick Clifton  <nickc@redhat.com>

	* v850.h (E_V850E1_ARCH): Define.

2003-08-21  James Cownie <jcownie@etnus.com>

	* dwarf2.h: Add PGI dwarf extensions.
	
2003-08-08 Dmitry Diky <diwil@mail.ru>
	
	* msp430.h: Add xW42 and xE42 parts. Sort MPU list according to
	gcc order.

2003-08-07  Alan Modra  <amodra@bigpond.net.au>

	* reloc-macros.h (START_RELOC_NUMBERS) : Remove PARAMS macro.  Use
	C90 function definition.  Formatting.
	(RELOC_NUMBER): Remove !__STDC__ code.

2003-07-28  Eric Christopher  <echristo@redhat.com>

	* ppc.h (R_PPC_RELAX32): New. Fake relocation.

2003-07-25  H.J. Lu  <hongjiu.lu@intel.com>

	* v850.h (SHF_V850_GPREL): New.
	(SHF_V850_EPREL): Likewise.
	(SHF_V850_R0REL): Likewise.

2003-07-09  Alexandre Oliva  <aoliva@redhat.com>

	2001-05-16  Alexandre Oliva  <aoliva@redhat.com>
	* mn10300.h: Introduce GOTPC16, GOTOFF24, GOTOFF16 and
	PLT16, and rename GOTPC to GOTPC32 and GOTOFF to GOTOFF32.
	Renumbered all relocs.
	2001-04-12  Alexandre Oliva  <aoliva@redhat.com>
	* mn10300.h (R_MN10300_GOTPC, R_MN10300_GOTOFF,
	R_MN10300_PLT32, R_MN10300_GOT32, R_MN10300_GOT24,
	R_MN10300_GOT16, R_MN10300_COPY, R_MN10300_GLOB_DAT,
	R_MN10300_JMP_SLOT, R_MN10300_RELATIVE): New relocs.

2003-07-09  Alexandre Oliva  <aoliva@redhat.com>

	2000-04-01  Alexandre Oliva  <aoliva@cygnus.com>
	* mn10300.h (E_MN10300_MACH_AM33_2): Renamed from
	E_MN10300_MACH_AM332.
	2000-03-31  Alexandre Oliva  <aoliva@cygnus.com>
	* mn10300.h (E_MN10300_MACH_AM332): Defined.

2003-07-01  Martin Schwidefsky  <schwidefsky@de.ibm.com>

	* s390.h (elf_s390_reloc_type): Add long displacement relocations
	R_390_20, R_390_GOT20, R_390_GOTPLT20 and R_390_TLS_GOTIE20.

2003-06-29  Andreas Jaeger  <aj@suse.de>

	* mmix.h: Convert to ISO C90 prototypes.
	* mips.h: Likewise.

2003-06-13  Robert Millan <zeratul2@wanadoo.es>

	* common.h (GNU_ABI_TAG_NETBSD): New tag.
	(GNU_ABI_TAG_FREEBSD): New tag.

2003-06-10  Richard Sandiford  <rsandifo@redhat.com>
